@@ -135,6 +135,7 @@ struct _DebugInfo {
 	bool        	use_global; /**< Whether to use global debug structure instead of this one. */
 	const char	*coding; /**< Encoding used in console */
 	bool		was_lf; /**< Has there already been new line */
+	bool		closable; /**< Whether Gammu can close the file when it is no longer needed for debug output. */
 };
 
 
